--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <title>Wie ben ik?</title>
         <link rel="stylesheet" href="assets/css/style.css">
+        <meta charset="UTF-8">
     </head>
     <body>
         <div id="container">
          <div id="header">
-            <img src="https://via.placeholder.com/350x350" alt="" />
-            <h1>Je naam</h1>
+            <img src="https://media.baamboozle.com/uploads/images/528921/1635298545_66996_gif-url.gif" alt="" />
+            <h1>Demi</h1>
         <div id="content">
             <h2>Over mij</h2>
             <div id="intro">
@@ -20,6 +21,8 @@
             <div id="kennis">
                 Mijn kennis voor webdeveloper is niet veel
             </div>
+
+            <p style="font-size:48px">&#127805</p>
             <ul>
                 <li></li>
                 <li></li>
@@ -29,20 +32,28 @@
         </div>
         <div id="experimental">
             <h2>Experimental Zone</h2>
+            <a href="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/ff1b4572800213.5bf4012230ee7.png">Halloween poster</a>
+            <p id="emoji" style="font-size:48px">&#127810</p>
+            <p id="emoji2" style="font-size:48px">&#127875</p>
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/YHAOBSSgTR8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            <p id="emoji3" style="font-size:48px">&#127809</p>
+            <p id="emoji5" style="font-size:48px">&#127792</p>
          </div>
          <div id="footer">
             &copy; 2022
             <br />
             <ul>
               <li>
-                <a href="#" title="Instagram"
-                  ><img src="assets/images/instagram.png" alt="Instagram"
-                /></a>
+                <a href="#" title="Instagram">
+                <img src="assets/images/instagram.png" alt="Instagram" style="width:49px; height:49px";/>
+              </a>
               </li>
               <li>
-                <a href="#" title="Youtube"
-                  ><img src="assets/images/youtube.png" alt="Youtube"
-                /></a>
+                <a href="#" title="Youtube">
+                <img src="assets/images/youtube.png" alt="Youtube" style="width:50px; height:50px";/>
+              </a>
               </li>
             </ul>
           </div>
