--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
                 <img src="assets/images/youtube.png" alt="Youtube" style="width:50px; height:50px";/>
               </a>
               </li>
-            </ul>
-          </div>
+            </ul>  
+               </div>
       </div>
+      <audio controls autoplay>
+        <source src="music.mp3" type="audio/mpeg"/>   
+      </audio>   
     </body>
 </html>
